# tm-ai-assistant

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
askerp/: ai_engine.py  alerts.py  api.py  briefing.py  business_context.py  classification_patterns.py  classifier.py  context_discovery.py  custom_tools.py  default_templates.py  default_tools.py  demo_mode.py  exports.py  formatting.py  hooks.py  install.py  memory.py  modules.txt  precompute.py  providers.py  query_cache.py  scheduled_reports.py  schema_utils.py  setup_wizard.py  suggestions.py  uninstall.py
askerp/askerp/doctype/ai_alert_rule/: ai_alert_rule.json
askerp/askerp/doctype/ai_chat_session/: ai_chat_session.json
askerp/askerp/doctype/ai_scheduled_report/: ai_scheduled_report.json  ai_scheduled_report.py
askerp/askerp/doctype/ai_usage_log/: ai_usage_log.json
askerp/askerp/doctype/askerp_business_profile/: askerp_business_profile.js  askerp_business_profile.json  askerp_business_profile.py
askerp/askerp/doctype/askerp_cached_metric/: askerp_cached_metric.json  askerp_cached_metric.py
askerp/config/: desktop.py
askerp/public/css/: chat_widget.css
askerp/public/js/: chat_widget.js  setup_wizard.js
askerp/www/: privacy.html  privacy.py
docs/: ADMIN_GUIDE.md  API_REFERENCE.md  MARKETPLACE_LISTING.md  USER_GUIDE.md
tm_ai_assistant/: ai_engine.py  alerts.py  api.py  briefing.py  business_context.py  exports.py  hooks.py  memory.py  modules.txt  scheduled_reports.py  suggestions.py
tm_ai_assistant/config/: desktop.py
(+25 files in other folders)
