[project]
name = "askerp"
authors = [
    { name = "Cogniverse", email = "shivaabhiramreddy@gmail.com" }
]
description = "AskERP Frappe Plugin — AI-powered business intelligence for ERPNext. Chat widget that queries your live ERP data using Claude, Gemini, or GPT."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
license = {text = "MIT"}
keywords = ["frappe", "erpnext", "ai", "chatbot", "business-intelligence", "claude", "gemini", "openai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Frappe",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
]

[project.urls]
Homepage = "https://github.com/shivaabhiramreddy/askerp-frappe"
Repository = "https://github.com/shivaabhiramreddy/askerp-frappe"
Documentation = "https://github.com/shivaabhiramreddy/askerp-frappe/tree/main/docs"
Issues = "https://github.com/shivaabhiramreddy/askerp-frappe/issues"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
